doc: refactor api pkg & example value
